[package]
name = "minesweeper_esp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.9", features = ["ntdef", "processthreadsapi", "handleapi", "memoryapi", "winnt", "minwindef", "wingdi", "winuser"] }
